# dig-merkle

./: AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT_LOG.md  README.md  SPEC.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/: context.rs  error.rs  hint.rs  hydrate.rs  lib.rs  lineage.rs  melt.rs  metadata.rs  mint.rs  read.rs  sign.rs  size.rs  types.rs  update.rs
