# dig-merkle — the DIG Network canonical CHIP-0035 DataLayer coin expert crate.
#
# A pure, key-free, network-free SpendBundle-builder library for the Chia CHIP-0035 DataLayer
# singleton that anchors a `.dig` file's merkle root on-chain. dig-merkle constructs the exact
# CoinSpends for every DataLayer-coin lifecycle operation and reports the exact signatures a caller
# must produce — it NEVER holds a secret key, NEVER signs, and NEVER touches the network. The
# consumer signs the reported messages, assembles the SpendBundle, and broadcasts. See SPEC.md for
# the normative contract.
#
# The crate foundation (U1): the type surface (`DataStore`, `DataStoreMetadata`, `DataStoreInfo`,
# `DelegatedPuzzle`, `MerkleCoinSpend`, `Owner`), the error taxonomy, the inner-spend helpers, and
# the load-bearing signing boundary (`required_signatures`). U2 adds `mint_datastore` (the DataLayer
# store mint, byte-identical to on-chain stores) + the owner-discovery hint. The remaining DataLayer
# operations (update/delegation/oracle/melt/read/hydrate/…) arrive in their own units against this
# foundation — their modules are declared as doc-only stubs so the layout is final.
[package]
name = "dig-merkle"
version = "0.3.0"
edition = "2021"
rust-version = "1.75.0"
license = "Apache-2.0 OR MIT"
description = "The DIG Network canonical CHIP-0035 DataLayer coin expert crate: a pure, key-free, network-free SpendBundle-builder for the Chia DataLayer singleton that anchors a .dig file's merkle root on-chain. Builds the exact CoinSpends for every DataLayer-coin lifecycle operation and reports the exact signatures a caller must produce — never holds a key, never signs, never broadcasts."
repository = "https://github.com/DIG-Network/dig-merkle"
readme = "README.md"
keywords = ["dig", "chia", "datalayer", "chip-0035", "singleton"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[lib]
# rlib for native consumers; cdylib so a later unit can compile a wasm façade over the same crate.
crate-type = ["cdylib", "rlib"]

[dependencies]
# The chia-wallet-sdk umbrella is the byte-source-of-truth for every DataLayer puzzle, layer, and
# spend (INV-4). Pinned to the 0.30 family the whole DIG on-chain line rides (chia-protocol 0.26).
# The `chip-0035` feature gates the DataLayer/DataStore primitives (DataStore, DataStoreMetadata,
# DataStoreInfo, DelegatedPuzzle, mint_datastore) — without it those types do not exist. We consume
# the DataLayer primitive, the launcher, the standard p2 layer, the spend context, and the pure
# signing calculator through it so the chia-* tree resolves to ONE coherent version set.
chia-wallet-sdk = { version = "0.30", features = ["chip-0035"] }
# Direct type deps, pinned to EXACTLY the versions chia-wallet-sdk 0.30 resolves to (a mismatch is a
# hard cargo error). chia-protocol/chia-puzzle-types carry wire types the umbrella prelude does not
# re-export (`Proof`, `LineageProof`); clvm-traits carries the CLVM (de)serialization traits.
chia-protocol = "0.26"
chia-puzzle-types = "0.26"
clvm-traits = "0.26"
# The SHA-256 used for the digstore owner-discovery hint. chia-sha2 is the exact hasher the existing
# on-chain producers (chip35_dl_coin, digstore-chain) use, so the hint bytes match byte-for-byte.
chia-sha2 = "0.26"
# The canonical reads-only Chia chain interface (a reference-DOWN pure leaf, no I/O of its own). It
# supplies the injected `ChainSource` trait that `resolve_owner_did` walks to prove a store's owning
# DID from chain, keeping dig-merkle itself network-free (INV-1).
dig-chainsource-interface = "0.1"
# Compile-time hex literals for the two pinned hint constants (SPEC §9), kept human-verifiable.
hex-literal = "0.4"
# The crate error taxonomy (SPEC §6). thiserror 2 matches the sibling DIG crates.
thiserror = "2"

[dev-dependencies]
# The in-process Chia Simulator + BLS keypair helpers for building real coin spends in tests.
chia-sdk-test = "0.30"
# The in-memory MockChainSource (behind `testing`) for wiring fail-closed fixture chains under test.
dig-chainsource-interface = { version = "0.1", features = ["testing"] }
# Hex assertions on computed signature messages / coin ids in tests.
hex = "0.4"
# Ergonomic `?`-propagating Result for the simulator integration tests.
anyhow = "1"
